--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,18 +33,41 @@ android {
     }
 }
 
-dependencies {
+ext {
+    kotlinVersion = '1.5.21'
+    coroutineVersion = '1.5.0'
+    orbitVersion = '4.2.0'
+    rxjava2Version = '2.2.21'
+    rxjava2AndroidVersion = '2.1.1'
+    rxjava2KotlinVersion = '2.4.0'
+    coroutineVersion = '2.4.0'
+}
 
+dependencies {
+    // Android - core
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     implementation 'androidx.core:core-ktx:1.6.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutineVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutineVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$coroutineVersion"
+
+    // ViewModel and lifecycles
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    kapt "androidx.lifecycle:lifecycle-common-java8:2.3.1"
 
-    implementation project(":mvi")
+    implementation project(path: ':mvi')
 
+    // RxJava
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava2Version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxjava2AndroidVersion"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxjava2KotlinVersion"
 }
